// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataProductAvailability - AvailabilityPending renders correctly for NeonContext that is final with error 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
  style={
    {
      "width": "100%",
    }
  }
>
  <div
    className="MuiCardContent-root css-ojcnvm-MuiCardContent-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "24px",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeLarge css-28yyoa-MuiSvgIcon-root"
      data-testid="WarningIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
      />
    </svg>
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      style={
        {
          "marginTop": "8px",
        }
      }
    >
      Error - Unable to Load Sites
    </h6>
  </div>
</div>
`;

exports[`DataProductAvailability - AvailabilityPending renders correctly for NeonContext that is final without error 1`] = `null`;

exports[`DataProductAvailability - AvailabilityPending renders correctly for NeonContext that is neither error nor final 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
  style={
    {
      "width": "100%",
    }
  }
>
  <div
    className="MuiCardContent-root css-ojcnvm-MuiCardContent-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "24px",
      }
    }
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-j14d78-MuiTypography-root"
    >
      Loading Sites...
    </h6>
    <span
      className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-w2h3to-MuiCircularProgress-root"
      role="progressbar"
      style={
        {
          "height": 40,
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx={44}
          cy={44}
          fill="none"
          r={20.2}
          strokeWidth={3.6}
          style={{}}
        />
      </svg>
    </span>
  </div>
</div>
`;
